test/zmod14_2.slq
// args: --run

def main(){
	x:=2:uint[2];
	return x pun ℤmod[5]; /// error
}
